bin/tests/errors/sema/sema_err_array_dim_zero.swg
#global fileprivate

var H: [0] s32      // swc-expected-error {{sema_err_array_dim_zero}}
